--- a/style.css
+++ b/style.css
@@ -1,148 +1,189 @@
 /* Reset styles */
-*,html,body,::after, ::before{
-    margin: 0;
-    box-sizing: border-box;
+*,
+html,
+body,
+::after,
+::before {
+  margin: 0;
+  box-sizing: border-box;
 }
 
-html{
-    font-size: 10px;
-    color: #444;
-    font-family: 'Poppins', sans-serif;
+html {
+  font-size: 10px;
+  color: #444;
+  font-family: 'Poppins', sans-serif;
 }
 
-header{
-    text-align: center;
-    height: 400px;
-    width: 100%;
-    background-color: rgb(104, 71, 117);
-    background-color: rgb(155, 98, 118);
-    background-image: url('./assets/joi-bg.jpg');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-blend-mode: multiply;
-    color: #fff;
-    padding: 2em;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    border-radius: 0 0 0 150px;
+header {
+  text-align: center;
+  height: 400px;
+  width: 100%;
+  background-color: rgb(104, 71, 117);
+  background-color: rgb(155, 98, 118);
+  background-image: url('./assets/joi-bg.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-blend-mode: multiply;
+  color: #fff;
+  padding: 2em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  border-radius: 0 0 0 150px;
 }
 
-header img{
-    margin-bottom: 20px;
+header img {
+  margin-bottom: 20px;
 }
-h1{
-    font-size: calc(30px + 2vmin);
+
+h1 {
+  font-size: calc(30px + 2vmin);
 }
-h2{
-    font-size: calc(16px + 2vmin) !important;
-    color: rgb(104, 71, 117);
+
+h2 {
+  font-size: calc(16px + 2vmin) !important;
+  color: rgb(104, 71, 117);
 }
 
 
 /* sections of perfume */
-.perfume-display{
-    padding: 2em;
-    display: flex;
-    min-height: 200px;
-    font-size: 16px;
-    flex-direction: column;
-    text-align: center;
-    justify-content: space-between;
+.perfume-display {
+  padding: 2em;
+  display: flex;
+  min-height: 200px;
+  font-size: 16px;
+  flex-direction: column;
+  text-align: center;
+  justify-content: space-between;
 }
 
-.bottle-size{
-    color: rgb(116, 51, 129);
-    background-color: rgb(255, 246, 250);
-    width: fit-content;
-    margin: 10px auto;
-    padding: 5px 10px;
-    border-radius: 2em;
-}
-.image-section{
-    position: relative;
-}
-.image-section-image{
-    margin-top: 10px;
+.bottle-size {
+  color: rgb(116, 51, 129);
+  background-color: rgb(255, 246, 250);
+  width: fit-content;
+  margin: 10px auto;
+  padding: 5px 10px;
+  border-radius: 2em;
 }
 
-.image-bg{
-    height: 180px;
-    width: 180px;
-    background-color: rgb(247, 197, 180);
-    border-radius: 20px 20px 60px 0;
-    position: absolute;
-    z-index: -1;
-    left: calc(50% - 90px);
+.image-section {
+  position: relative;
+}
+
+.image-section-image {
+  margin-top: 10px;
+}
+
+.image-bg {
+  height: 180px;
+  width: 180px;
+  background-color: rgb(247, 197, 180);
+  border-radius: 20px 20px 60px 0;
+  position: absolute;
+  z-index: -1;
+  left: calc(50% - 90px);
 }
 
 
 /* other colections */
-.other-collection{
-    width: 100%;
-    height: 300px;
-    background-color: rgb(255, 255, 255);
-    background-image: url('./assets/other.jpeg');
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1em;
+.other-collection {
+  width: 100%;
+  height: 300px;
+  background-color: rgb(255, 255, 255);
+  background-image: url('./assets/other.jpeg');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1em;
 }
 
-.other-collection p{
-    width: fit-content;
-    background-color: rgb(104, 71, 117);
-    padding: 1em 2em;
-    color: #fff;
-    border-radius: 2em; 
-    text-align: center;
+.other-collection p {
+  width: fit-content;
+  background-color: rgb(104, 71, 117);
+  padding: 1em 2em;
+  color: #fff;
+  border-radius: 2em;
+  text-align: center;
+  font-size: 1.6rem;
 }
 
-.other-collection p > span{
-    margin-left: 1em;    
+a {
+  text-decoration: none;
+  color: #fff;
 }
 
-footer{
-    text-align: center;
-    padding: 1em;
+.other-collection p>span {
+  margin-left: 1em;
 }
 
-@media all and (min-width:767px){
-    /* sections of perfume */
-.perfume-display{
+footer {
+  text-align: center;
+  padding: 1em;
+  font-size: 1.4rem;
+}
+
+@media all and (min-width:767px) {
+
+  /* sections of perfume */
+  .perfume-display {
     flex-direction: row;
     text-align: start;
     justify-content: center;
     align-items: center;
-}
+  }
 
-.bottle-size{
+  .bottle-size {
     margin: 10px 0;
-}
-#display2 .image-section{
-    position: relative;
-    margin-right: 50px;
-}
-#display1 .image-section{
+  }
+
+  #display1 .image-section {
     position: relative;
     margin-left: 50px;
-}
-.image-section-image{
+  }
+
+  #display2 .image-section {
+    position: relative;
+    /* margin-right: 50px; */
+  }
+
+  #display3 .image-section {
+    position: relative;
+    margin-left: 50px;
+  }
+
+  #display4 .image-section {
+    position: relative;
+    /* margin-left: 50px; */
+  }
+
+  .image-section-image {
     margin-top: 10px;
-}
+  }
 
-#display2{
+  #display2,
+  #display4 {
     flex-direction: row-reverse;
-}
+  }
 
-.image-bg{
+  #display1,
+  #display3 {
+    text-align: end;
+  }
+
+  #display1 .bottle-size,
+  #display3 .bottle-size {
+    text-align: end;
+    float: right;
+  }
+
+  .image-bg {
     height: 180px;
     width: 180px;
     background-color: rgb(247, 197, 180);
@@ -150,9 +191,22 @@ footer{
     position: absolute;
     z-index: -1;
     left: calc(50% - 90px);
+  }
+
+  .other-collection {
+    height: 400px;
+  }
+
+  .other-collection h2 {
+    background-color: #fff;
+    padding: 5px 20px;
+    border-radius: 2em;
+  }
 }
 
-    .other-collection{
-        height: 400px;   
-    }
+@media all and (min-width:1200px){
+  main{
+    width: 1200px;
+    margin: 0 auto;
+  }
 }
