--- a/style.css
+++ b/style.css
@@ -152,6 +152,63 @@ a {
   background-color: orange;
 }
 
+.keys {
+  display: flex;
+  justify-content: space-between;
+  margin: 1em auto;
+}
+
+.keys input {
+  flex: 1;
+  padding: 5px;
+  margin: 0.22em;
+}
+
+.calculator {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+#calculator-wrapper {
+  margin-top: 1em;
+  max-width: 360px;
+}
+
+#screen {
+  width: 100%;
+  padding: 0.5em;
+  background-color: rgb(242, 229, 255);
+  border: none;
+  height: 60px;
+  display: block;
+  margin: 1em auto;
+}
+
+form {
+  background-color: rgb(45, 0, 67);
+  height: 360px;
+  padding-top: 1em;
+  width: 80%;
+}
+
+fieldset {
+  height: 310px;
+  border: none;
+  padding: 1em;
+}
+
+legend {
+  color: hotpink;
+}
+
+@media (min-width: 520px) {
+  form {
+    width: 480px;
+
+  }
+}
 footer {
   text-align: center;
   padding: 1em;
